# kaukkari-cli

./: Cargo.toml  README.md
.github/workflows/: conventional-commits.yml  validation.yml
src/: api.rs  main.rs  matcher.rs
src/commands/: apple_tv.rs  base.rs  chromecast.rs  disco.rs  fridge.rs  help.rs  mod.rs  off.rs  on.rs  starry_sky.rs  volume.rs  volume_down.rs  volume_mute.rs  volume_up.rs
